[package]
name = "infrared-tutorial"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103", "medium"] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.7" }
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3.3"
infrared = "0.6"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true

